fix top padding when viewed on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,12 @@
   min-height: 100vh;
 }
 
+@media only screen and (max-width: 600px) {
+  .main {
+    padding: 1rem;
+  }
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
